# sgl

./: CMakeLists.txt  readme.md  todo.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/01_window/: CMakeLists.txt  main.cpp
examples/02_point/: CMakeLists.txt  main.cpp
examples/02_point/shaders/: shader.frag  shader.vert
examples/02_triangle/: CMakeLists.txt  main.cpp
examples/02_triangle/shaders/: shader.vert
examples/03_line/: CMakeLists.txt  main.cpp
examples/03_line/shaders/: shader.frag
examples/03_rectangle/: CMakeLists.txt  main.cpp
examples/03_rectangle/shaders/: shader.vert
examples/04_texture/: CMakeLists.txt  main.cpp
examples/04_texture/shaders/: shader.vert
examples/04_triangle/: CMakeLists.txt  main.cpp
examples/04_triangle/shaders/: shader.vert
examples/05_rectangle/: CMakeLists.txt  main.cpp
examples/05_rectangle/shaders/: shader.vert
examples/06_circle/: CMakeLists.txt  main.cpp
examples/07_texture/: CMakeLists.txt  main.cpp
examples/07_texture/shaders/: shader.frag  shader.vert
examples/08_cube/: CMakeLists.txt  main.cpp
examples/08_cube/shaders/: shader.vert
examples/09_camera/: main.cpp
examples/10_lightning/: main.cpp
examples/10_lightning/shaders/: object.frag
examples/11_lightning_gouraud/: main.cpp
examples/11_lightning_gouraud/shaders/: light.frag  object.frag  object.vert
examples/common/: CMakeLists.txt
examples/common/01_window/: CMakeLists.txt  main.cpp
examples/gl/: CMakeLists.txt
examples/gl/01_point/: CMakeLists.txt  main.cpp
examples/gl/01_window/: CMakeLists.txt  main.cpp
examples/gl/02_line/: CMakeLists.txt  main.cpp
examples/gl/02_point/: main.cpp
examples/gl/03_line/: main.cpp
examples/gl/03_triangle/: CMakeLists.txt  main.cpp
examples/gl/04_rectangle/: CMakeLists.txt  main.cpp
examples/gl/04_triangle/: CMakeLists.txt  main.cpp
examples/gl/05_circle/: CMakeLists.txt  main.cpp
examples/gl/05_rectangle/: CMakeLists.txt  main.cpp
examples/gl/06_circle/: CMakeLists.txt  main.cpp
examples/gl/06_circle/shaders/: shader.frag  shader.vert
examples/gl/06_texture/: CMakeLists.txt  main.cpp
examples/gl/06_texture/shaders/: shader.vert
examples/gl/07_cube/: CMakeLists.txt  main.cpp
examples/gl/07_texture/: CMakeLists.txt  main.cpp
examples/gl/08_camera/: CMakeLists.txt  main.cpp
examples/gl/08_cube/: CMakeLists.txt  main.cpp
examples/gl/09_camera/: CMakeLists.txt  main.cpp
examples/gl/09_lighting/: CMakeLists.txt  main.cpp
examples/gl/09_lighting/shaders/: object.vert
examples/gl/10_lighting/: CMakeLists.txt  main.cpp
examples/gl/10_lighting/shaders/: light.vert
examples/gl/10_lighting_gouraud/: CMakeLists.txt  main.cpp
examples/gl/10_lightning/: CMakeLists.txt
examples/gl/11_lighting_gouraud/: CMakeLists.txt  main.cpp
examples/gl/11_lightning_gouraud/: main.cpp
include/: sgl.h
include/internal/: sgl_backend.h  sgl_camera.h  sgl_color.h  sgl_config.h  sgl_element_buffer.h  sgl_expected.h  sgl_file.h  sgl_gl_info.h  sgl_info.h  sgl_input.h  sgl_io.h  sgl_key.h  sgl_log.h  sgl_math.h  sgl_render.h  sgl_shader.h  sgl_texture.h  sgl_time.h  sgl_type.h  sgl_util.h  sgl_vertex_array.h  sgl_vertex_buffer.h  sgl_window.h
src/: sgl_backend.cpp  sgl_camera.cpp  sgl_element_buffer.cpp  sgl_file.cpp  sgl_gl_info.cpp  sgl_info.cpp  sgl_input.cpp  sgl_io.cpp  sgl_log.cpp  sgl_render.cpp  sgl_shader.cpp  sgl_texture.cpp  sgl_time.cpp  sgl_type.cpp  sgl_vertex_array.cpp  sgl_vertex_buffer.cpp  sgl_window.cpp
