add_subdirectory(01_window)
add_subdirectory(02_point)
add_subdirectory(03_line)
add_subdirectory(04_triangle)
add_subdirectory(05_rectangle)
add_subdirectory(06_circle)
add_subdirectory(07_texture)
add_subdirectory(08_cube)
add_subdirectory(09_camera)
add_subdirectory(10_lightning)
add_subdirectory(11_lightning_gouraud)
